# qgis_mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  =25.1.0  =5.13.2  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SETUP_GUIDE.md  __main__.py  pyproject.toml  requirements-dev.txt  requirements-secure.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: code-quality.yml  dependency-update.yml  release.yml  security-tests.yml
docs/: CONVERSATION_EXAMPLES.md  USER_GUIDE.md
examples/: README.md  async_operations.py  basic_usage.py  geoprocessing_workflow.py  map_rendering.py
qgis_mcp_plugin/: __init__.py  async_executor.py  optimization.py  protocol.py  qgis_mcp_plugin_main.py  qgis_mcp_server_optimized.py  qgis_mcp_server_secure.py  security_improved.py  tls_handler.py
src/qgis_mcp/: __init__.py  qgis_mcp_client_secure.py
src/qgis_mcp_server/: __init__.py  server.py
tests/: README.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  test_quick.py  test_security.py
tests/integration/: __init__.py  test_auth_flow.py  test_performance.py  test_server_client.py
tests/performance/: __init__.py  benchmark_async.py  benchmark_cache.py  benchmark_end_to_end.py  benchmark_features.py  benchmark_protocol.py  conftest.py  run_all_benchmarks.py
tests/security/: __init__.py  test_fuzzing.py  test_penetration.py
tests/unit/: __init__.py  test_protocol.py  test_security_auth.py  test_security_paths.py  test_security_ratelimit.py  test_security_sandbox.py  test_tls.py
